--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4,7 +4,7 @@ body {
     margin: 0 0 10em 0;
     padding: 0;
     background: #fffff9;
-    font-family: Georgia, Times, serif;
+    font-family: Arial, sans-serif;
 }
 
 input, textarea, button {
@@ -20,19 +20,16 @@ label {
     display: block;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-}
-
 h1 {
     margin-bottom: 0;
+    font-weight: normal;
 }
 
 nav {
     text-align: right;
     width: 250px;
     height: 100%;
-    padding: 0 1em;
+    padding: 1em;
     position: fixed;
     top: 0;
     left: 0;
@@ -83,6 +80,7 @@ a:hover {
 }
 
 .container {
+    padding-top: 1em;
     margin-left: 350px;
     max-width: 600px;
 }
