--- a/web/css/main.css
+++ b/web/css/main.css
@@ -79,6 +79,18 @@ a:hover {
     background: #fec;
 }
 
+code {
+    display: inline-block;
+    margin: auto;
+    background: #eed;
+}
+pre code {
+    display: block;
+    margin: 1em 0;
+    padding: 0.5em;
+    
+}
+
 .container {
     padding-top: 1em;
     margin-left: 350px;
