--- a/web/css/main.css
+++ b/web/css/main.css
@@ -13,6 +13,7 @@ a {
     padding: 0.25em;
 }
 a:hover {
+    color: #d00;
     text-decoration: underline;
 }
 
@@ -47,13 +48,14 @@ nav .intro {
     font-weight: normal;
     color: #a99;
 }
-nav .logo {
-    color: #a99;
+nav .logo a {
+    color: #a00;
     padding: 0;
 }
-nav .logo:hover {
-    color: #988;
+nav .logo a:hover {
+    color: #d00;
     background: inherit;
+    text-decoration: none;
 }
 nav .name {
     display: block;
