--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-size: 110%;
     line-height: 1.35em;
-    margin: 0 0 10em 0;
+    margin: 1em 0 10em 0;
     padding: 0;
     background: #fffffd;
     font-family: Arial, sans-serif;
@@ -34,6 +34,7 @@ label {
 }
 
 .logo-title {
+    margin-top: 0;
     margin-bottom: 0;
     font-weight: normal;
 }
@@ -42,7 +43,7 @@ nav {
     text-align: right;
     width: 250px;
     height: 100%;
-    padding: 1em;
+    padding: 2em 1em 1em 1em;
     position: fixed;
     top: 0;
     left: 0;
@@ -121,6 +122,7 @@ pre code {
 
 .posts {
     list-style: none;
+    margin-top: 0;
 }
 .posts li {
     margin-bottom: 0.75em;
@@ -149,6 +151,7 @@ pre code {
 }
 
 .post-title {
+    margin-top: 0;
     margin-bottom: 0;
 }
 .post-date {
