--- a/web/css/main.css
+++ b/web/css/main.css
@@ -82,7 +82,6 @@ nav .intro {
     color: #a99;
 }
 nav .logo a {
-    color: #a00;
     padding: 0;
 }
 nav .logo a:hover {
@@ -172,7 +171,11 @@ nav .intro {
 .post-date {
     font-size: 0.8em;
     color: #555;
-    margin-top: 0;
+    margin-top: 0.25em;
+}
+
+.post {
+    margin-bottom: 3em;
 }
 
 .tag {
