--- a/web/css/main.css
+++ b/web/css/main.css
@@ -59,6 +59,15 @@ label {
     display: block;
 }
 
+.h {
+    font-family: "Roboto Condensed", Arial, sans-serif;
+    font-weight: 500;
+}
+
+.site-title {
+    font-size: 1.5em;
+    font-weight: 500;
+}
 .logo-title {
     margin-top: 0;
     margin-bottom: 0;
@@ -165,6 +174,10 @@ nav .intro {
 }
 
 .post-title {
+    font-family: "Roboto Condensed", Arial, sans-serif;
+    font-size: 1.75em;
+    line-height: 1.35em;
+    font-weight: 500;
     margin-top: 0;
     margin-bottom: 0;
 }
