Underline paragraph links for better UX

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -20,6 +20,10 @@ a:hover {
     text-decoration: underline;
 }
 
+p a {
+    text-decoration: underline;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin: 2em 0 1em;
     font-family: "Roboto Condensed", Arial, sans-serif;
